--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_secure_storage: ^9.2.4
   hex: ^0.2.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
